@@ -1,5 +1,10 @@
 2008-06-04  Stefan Kost  <ensonic@users.sf.net>
 
+	* autogen.sh:
+	  Correct invocation for gnome-doc-prepare.
+
+2008-06-04  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-common.pl.in:
 	  Handle file or line being undefined.
 
